--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,7 @@
     text-align: center;
     font-size: 1rem;
     align-self: center;
+    position: relative;
     
     
 }
@@ -311,6 +312,15 @@ a {
         max-width: 50%;
     }
 }
+@media (max-width: 760px) {
+    .custom-forma .col-lg-6 {
+      width: 100%; 
+    }
+  
+    .custom-forma .col-lg-6 .formacao {
+      margin-bottom: 15px; 
+    }
+  }
 @media (min-width: 576px){
 .col-sm-8 {
     flex: 0 0 auto;
