corrigindo erros de layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -316,6 +316,9 @@ a {
     .card-color p{
         padding: 64px 30px 17px 30px;
     }
+    .redes-sociais {
+        margin-left: 12px;
+    }
   
     
   }
