--- a/css/styles.css
+++ b/css/styles.css
@@ -338,6 +338,7 @@ a {
         border-bottom-right-radius: 40px;
         border-top-left-radius: 20px;
         border-top-right-radius: 60px;
+        margin-top: 10px;
     }
     .redes-sociais {
         margin-left: 12px;
