--- a/css/styles.css
+++ b/css/styles.css
@@ -181,13 +181,24 @@
 h1{
     padding: 30px;
 }
+
+.sobre {
+
+    margin-top: 10px;
+}
+
+
 .sobre img {
     margin-left: 19px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    border-bottom-left-radius: 60px;
+    border-bottom-right-radius: 20px;
+    
+    border-top-right-radius: 40px;
 }
 
 .display-5 {
-    font-size: calc(0.425rem + 2.1vw);
+    font-size: 2rem;
     font-weight: 300;
     line-height: 1.2;
     padding-top: 126px;
@@ -342,6 +353,9 @@ a {
     }
     .redes-sociais {
         margin-left: 12px;
+    }
+    .sobre {
+        margin-top: -87px;
     }
   
     
