--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,22 +1,24 @@
 .carousel-item {
     height: 100vh;
-    
+  
     align-items: center;
     justify-content: center;
-}
-
-.carousel-item img {
+  }
+  
+  .carousel-item img {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-}
-.navbar {
-    
+    box-shadow: rgba(38, 57, 77, 0.4);
+  }
+  
+  .navbar {
+  
     background-color: #c7cfd2a6;
     border-bottom: 1px solid #ffffff;
-}
-.navbar-light .navbar-brand {
+  }
+  
+  .navbar-light .navbar-brand {
     color: #fff;
     font-size: 25px;
     text-transform: uppercase;
@@ -26,62 +28,59 @@
     margin-right: 10px;
     border-right: 0.5px solid white;
     padding: 3px;
-}
-
-.carousel-caption h5 {
+  }
+  
+  .carousel-caption h5 {
     font-size: 5.25rem;
     padding: 10px;
     text-align: start;
     margin-bottom: 128px;
     font-weight: bold;
-    
-    
-}
-.carousel-caption p {
+  }
+  
+  .carousel-caption p {
     font-size: 2rem;
-    text-align: start;  
-}
-
-.navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
+    text-align: start;
+  }
+  
+  .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
     color: #fff;
-}
-
-.navbar-light .navbar-nav .nav-link {
+  }
+  
+  .navbar-light .navbar-nav .nav-link {
     color: #fff;
     margin-right: 66px;
-
-}
-
-.navbar-toggler {
+  }
+  
+  .navbar-toggler {
     background: #fff;
-}
-
-.navbar-nav {
+  }
+  
+  .navbar-nav {
     text-align: center;
     font-size: 1.2rem;
-}
-
-.nav-link {
+  }
+  
+  .nav-link {
     padding: .2rem 1rem;
     justify-self: start;
-}
-
-.nav-link.active,.nav-link:focus{
+  }
+  
+  .nav-link.active, .nav-link:focus {
     color: #fff;
-}
-
-.navbar-toggler {
+  }
+  
+  .navbar-toggler {
     padding: 1px 5px;
     font-size: 18px;
     line-height: 0.3;
-}
-
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+  }
+  
+  .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
     color: #fff;
-}
-
-.navbar-text {
-    
+  }
+  
+  .navbar-text {
     justify-content: center;
     text-align: left;
     color: #fff;
@@ -89,128 +88,101 @@
     background-color: rgb(108, 109, 109);
     border-radius: 15px 15px 15px 15px;
     padding: 7px;
-    
-}
-.bi-telephone::before {
+  }
+  
+  .bi-telephone::before {
     content: "\f5c1";
     color: #fff;
-}
-.phone-number {
+  }
+  
+  .phone-number {
     margin-left: 7px;
     color: #fff;
-}
-.card-overlay-c h5 {
-
+  }
+  
+  .card-overlay-c h5 {
     padding-top: 10px;
     margin-top: 10px;
     margin-bottom: 5px;
-
-
-}
-.card-overlay-c {
+  }
+  
+  .card-overlay-c {
     margin-top: 173px;
     text-align: center;
     border: 1px solid #0000;
     height: 50vh;
-    box-shadow: rgb(178, 216, 233, 0.4) 5px 5px, rgb(178, 216, 233, 0.3) 10px 10px, rgb(178, 216, 233, 0.2) 15px 15px, rgb(178, 216, 233, 0.1) 20px 20px, rgb(178, 216, 233, 0.05) 25px 25px;
+    box-shadow: rgba(178, 216, 233, 0.4);
     border-top-left-radius: 20px;
     border-top-right-radius: 60px;
     border-bottom-left-radius: 80px;
     border-bottom-right-radius: 40px;
-}
-
-
-.card-overlay {
-    
+  }
+  
+  .card-overlay {
     z-index: 1;
-    margin-top: -100px; 
+    margin-top: -100px;
     text-align: center;
     align-items: center;
-    
-}
-.card-color {
+  }
+  
+  .card-color {
     background-color: #b2d8e9;
     border: 0.5px solid #94b2c0;
- 
-    
-}
-.card-color img{
+  }
+  
+  .card-color img {
     padding: 10px;
-}
-
-
-.card-color p {
+  }
+  
+  .card-color p {
     color: #fff;
     padding: 14px 32px 16px 27px;
     text-align: center;
     font-size: 1rem;
     align-self: center;
     position: relative;
-    
-    
-}
-.card-color h5 {
+  }
+  
+  .card-color h5 {
     color: #fff;
     font-weight: bold;
     padding: 15px 15px 15px 15px;
     align-self: center;
-}
-
-
-.card-p:hover {
-    
+  }
+  
+  .card-p:hover {
     background-color: #94b2c0;
-    
-    
-    
-}
-.card-s:hover {
-    
+  }
+  
+  .card-s:hover {
     background-color: #94b2c0;
-    
-    
-    
-}
-.card-t:hover {
-    
+  }
+  
+  .card-t:hover {
     background-color: #94b2c0;
-    
-    
-    
-}
-h1{
+  }
+  
+  h1 {
     padding: 30px;
-}
-
-.sobre {
-
+  }
+  
+  .sobre {
     margin-top: 10px;
-}
-
-.sobre p{
+  }
+  
+  .sobre p {
     border: 1px solid #94b2c0;
     border-bottom-left-radius: 80px;
     border-bottom-right-radius: 40px;
-    
     border-top-right-radius: 60px;
     padding: 40px;
     background-color: #ccccccc7;
     margin-top: 35px;
     margin-left: 35px;
-}
-.display-5 {
+  }
+  
+  .display-5 {
     text-decoration: underline #94b2c0;
-}
-.sobre img {
-    margin-left: 19px;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-    border-bottom-left-radius: 60px;
-    border-bottom-right-radius: 20px;
-    
-    border-top-right-radius: 40px;
-}
-
-.display-5 {
     font-size: 2rem;
     font-weight: 300;
     line-height: 1.2;
@@ -218,77 +190,76 @@ h1{
     color: #192A56;
     letter-spacing: 3px;
     margin-left: 30px;
-}
-
-.display-4 {
+  }
+  
+  .display-4 {
     margin-left: 32px;
     margin-bottom: -9px;
     margin-top: 43px;
     font-size: 2rem;
     font-weight: 400;
-}
-.historico {
+  }
+  
+  .historico {
     background-color: #b2d8e9;
     margin-top: 100px;
     --bs-gutter-x: 1rem !important;
-    
-}
-/* Espaçamento lateral das formações */
-.formacao {
+  }
+  
+  .formacao {
     margin-bottom: 20px;
-    margin-top: 10px ;
-    
-}
-
-/* Posicionamento das formações */
-.formacao .img-icon {
+    margin-top: 10px;
+  }
+  
+  .formacao .img-icon {
     display: inline-block;
     vertical-align: middle;
-}
-
-.formacao p {
+  }
+  
+  .formacao p {
     display: inline-block;
     vertical-align: middle;
     margin-left: 10px;
     font-size: 13px;
     line-height: 22px;
     text-align: center;
-}
-
-.img-icon{
-    
+  }
+  
+  .img-icon {
     position: relative;
     left: -17px;
     right: 0;
     margin: -1px;
     padding: 3px;
-
-}
-.row.custom{
+  }
+  
+  .row.custom {
     margin-top: 58px;
     --bs-gutter-x: 4.5rem;
-}
-.row.custom-forma{
-    
+  }
+  
+  .row.custom-forma {
     --bs-gutter-x: 8.5rem;
-}
-
-.formacao .img-icon img {
+  }
+  
+  .formacao .img-icon img {
     width: 69px;
     height: 56px;
- 
-}
-.img-historico img {
+  }
+  
+  .img-historico img {
     height: 575px;
     width: 500px;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-}
-.serv{
+    box-shadow: rgba(38, 57, 77, 0.1) ;
+  }
+  
+  .serv {
     margin-top: 100px;
     padding: 76px;
     background-color: #f2f2f2;
-}
-.serv h3{
+  }
+  
+  .serv h3 {
     color: #4d4d4d;
     padding: 21px 14px 15px 8px;
     text-align: left;
@@ -296,94 +267,100 @@ h1{
     letter-spacing: 0px;
     margin: 12px 17px 12px 14px;
     text-align: center;
-}
-.serv h4{
+  }
+  
+  .serv h4 {
     margin-left: -2px;
     font-size: 29px;
     padding: 0px;
     padding-bottom: 49px;
-}
-footer{
+  }
+  
+  footer {
     padding-top: 200px;
-   
-}
-.foot{ 
-
+  }
+  
+  .foot {
     margin-bottom: 100px;
-}
-a {
-
+  }
+  
+  a {
     text-decoration: none;
-}
-
-.contatos{
+  }
+  
+  .contatos {
     margin-top: 102px;
     margin-left: 43px;
     background-color: ghostwhite;
-    margin-right: 43px;;
+    margin-right: 43px;
     margin-bottom: 101px;
-
-}
-.contatos h1 {
-
+  }
+  
+  .contatos h1 {
     margin-left: 15px;
-}
-.redes-sociais {
+  }
+  
+  .redes-sociais {
     margin: 110px;
     padding-bottom: 40px;
-}
-.insta{
+  }
+  
+  .insta {
     border-top: 1px solid #000;
     padding: 40px;
     margin-left: 100px;
     margin-right: 100px;
-}
-.insta img{
+  }
+  
+  .insta img {
     width: 35px;
     height: 35px;
-}
-@media (min-width: 768px) {
+  }
+  
+  @media (min-width: 768px) {
     .historico .col-md-6 {
-        flex-basis: 50%;
-        max-width: 50%;
-    }
-}
-@media (max-width: 760px) {
-    .card-color p{
-        padding: 26px 30px 47px 30px;
-        font-size: 1rem;
-        border: 1px solid rgb(254, 255, 255);
-        border-bottom-left-radius: 80px;
-        border-bottom-right-radius: 40px;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 60px;
-        margin-top: 10px;
-    }
-    .redes-sociais {
-        margin-left: 12px;
-    }
-    .sobre {
-        margin-top: -87px;
-    }
-    .sobre p{
-        border: 1px solid #94b2c0;
-        border-bottom-left-radius: 80px;
-        border-bottom-right-radius: 40px;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 60px;
-        padding: 30px;
-        background-color: #ccccccc7;
-    }
-    .display-5 {
-        text-decoration: underline #94b2c0;
-    }
-    .card-text {
-        margin-top: 10px;
+      flex-basis: 50%;
+      max-width: 50%;
     }
   }
-@media (min-width: 576px){
-.col-sm-8 {
-    flex: 0 0 auto;
-    width: 84.666667%;
-}
-}
+  
+  @media (max-width: 760px) {
+    .card-color p {
+      padding: 26px 30px 47px 30px;
+      font-size: 1rem;
+      border: 1px solid rgb(254, 255, 255);
+      border-bottom-left-radius: 80px;
+      border-bottom-right-radius: 40px;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 60px;
+      margin-top: 10px;
+    }
+    .redes-sociais {
+      margin-left: 12px;
+    }
+    .sobre {
+      margin-top: -87px;
+    }
+    .sobre p {
+      border: 1px solid #94b2c0;
+      border-bottom-left-radius: 80px;
+      border-bottom-right-radius: 40px;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 60px;
+      padding: 30px;
+      background-color: #ccccccc7;
+    }
+    .display-5 {
+      text-decoration: underline #94b2c0;
+    }
+    .card-text {
+      margin-top: 10px;
+    }
+  }
+  @media (min-width: 576px) {
+    .col-sm-8 {
+      flex: 0 0 auto;
+      width: 84.666667%;
+    }
+  }
+  
